--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>🎨 Color Catcher</title>
-  <link rel="stylesheet" href="color.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -14,6 +14,6 @@
   </div>
   <div id="info">Level: 1 | Score: 0 | Best: 0</div>
   <button id="startBtn">Start Game</button>
-<script src="color.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
