--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
   </div>
   <div id="info">Level: 1 | Score: 0 | Best: 0</div>
   <button id="startBtn">Start Game</button>
+ <div class="btns"> 
+  <button id="leftbtn">←</button>
+  <button id="rightbtn">→</button>
+</div>
 <script src="app.js"></script>
+
 </body>
 </html>
